--- a/linux/shell/00.md
+++ b/linux/shell/00.md
@@ -1,15 +1,19 @@
-* **.** 当前目录
+- 当前目录
 
-* **..** 上级目录
+  ```
+  .
+  ```
 
-* **.** 开头的文件 表示隐藏文件
+- 上级目录
 
-* 想要执行当前目录下的某个脚本文件,前面要加 **./** ,否则会认为这是一个command
-```
-./脚本文件名
-```
+  ```
+  ..
+  ```
 
-* 常用命令
-```
-重启： reboot
-```
+- . 开头的文件 表示隐藏文件
+
+- 想要执行当前目录下的某个脚本文件,前面要加 **./** ,否则会认为这是一个command
+
+  ```
+  ./脚本文件名
+  ```
