用户/查找/打包 相关命令

--- a/linux/shell/02文件相关命令.md
+++ b/linux/shell/02文件相关命令.md
@@ -103,13 +103,13 @@
   mkdir -m 755 picture
   ```
 
+# rm
+
 - rm [选项] 文件
 
   1. 该命令的功能为删除一个目录中的一个或多个文件或目录
   2. 也可以将某个目录及其下的所有文件及子目录均删除
   3. 对于链接文件，只是删除了链接，原有文件均保持不变
-
-# rm
 
 - 命令参数
 
@@ -249,34 +249,33 @@
   -a    相当于-pdr（p,d,r为上述的参数）
   ```
 
-  - 示例
+- 示例
 
-    1. 复制单个文件到目标目录，文件在目标文件中不存在：
+  1. 复制单个文件到目标目录，文件在目标文件中不存在：
 
-      ```
-      cp log.log test5
-      ```
+    ```
+    cp log.log test5
+    ```
 
-    2. 复制整个目录及其子文件夹
+  2. 复制整个目录及其子文件夹
 
-      ```
-      cp -r test test2
-      ```
-
-    3. touch [选项]... 文件...
-
-      1. 用来修改文件时间戳
-      2. 新建一个不存在的文件
-
-    4. linux中的文件有三种时间
-
-      ```
-      更改时间(mtime):内容修改时间（不包括权限的）
-      更改权限(ctime):更改权限与属性的时间
-      读取时间(atime):读取文件内容的时间
-      ```
+    ```
+    cp -r test test2
+    ```
 
 # touch
+
+- touch [选项]... 文件...
+
+- 1 用来修改文件时间戳;2 新建一个不存在的文件
+
+- linux中的文件有三种时间
+
+  ```
+    更改时间(mtime):内容修改时间（不包括权限的）
+    更改权限(ctime):更改权限与属性的时间
+    读取时间(atime):读取文件内容的时间
+  ```
 
 - 命令参数
 
@@ -285,7 +284,7 @@
   -m    近修改“更改时间”（mtime）
   -d    同时修改atime与mtime
   -t    要修改成的时间[[CC]YY]MMDDhhmm[.ss]
-  -r  把指定文档或目录的日期时间，统统设成与参考文档或目录的日期时间相同
+  -r    把指定文档或目录的日期时间，统统设成与参考文档或目录的日期时间相同
   ```
 
 - 使用范例
@@ -302,67 +301,69 @@
   touch -r a.log c.log
   ```
 
-  1. 设定文件的时间戳，时间戳的格式为 **[[CC]YY]MMDDhhmm[.ss]** 表示CC+1 世纪的第YY年，其实也就是一般的年份写法，其它与一般时间戳没有区别,由于系统的限制，早于1970年1月1日的时间是错误的
+  1. 设定文件的时间戳，时间戳的格式为 **[[CC]YY]MMDDhhmm[.ss]** 由于系统的限制，早于1970年1月1日的时间是错误的
 
   ```
   touch -t 197001010000.00 c.log
   ```
 
-  - head head命令用于查看纯文本文档的前N行，格式为：**head [选项] [文件]**。
+# 其它
 
-    ```
-    tail -n 10 文件名      显示10行
-    tail -n -10 文件名     正常输出，但不显示最后的10行
-    ```
+- head head命令用于查看纯文本文档的前N行，格式为：**head [选项] [文件]**。
 
-  - tail tail命令用于查看纯文本文档的后N行，格式为：**tail [选项] [文件]**
+  ```
+  head -n 10 文件名      显示10行
+  head -n -10 文件名     正常输出，但不显示最后的10行
+  ```
 
-    ```
-    tail -n 20 文件名      显示最后20行
-    tail -f               持续刷新显示的内容
-    ```
+- tail tail命令用于查看纯文本文档的后N行，格式为：**tail [选项] [文件]**
 
-  - od命令用于对查看特殊格式的文件，格式为：**od [选项] [文件]**
+  ```
+  tail -n 20 文件名      显示最后20行
+  tail -f               持续刷新显示的内容
+  ```
 
-    ```
-    -t a    默认字符
-    -t c    ASCII字符
-    -t o    八进制
-    -t d    十进制
-    -t x    十六进制
-    -t f    浮点数
-    ```
+- od命令用于对查看特殊格式的文件，格式为：**od [选项] [文件]**
 
-  - tr命令用于转换文本文件中的字符，格式为:**tr [原始字符] [目标字符]**
+  ```
+  -t a    默认字符
+  -t c    ASCII字符
+  -t o    八进制
+  -t d    十进制
+  -t x    十六进制
+  -t f    浮点数
+  ```
 
-    ```
-    cat tr.txt | tr [a-z] [A-Z]
-    将tr.txt中的内容转换为大写
-    ```
+- tr命令用于转换文本文件中的字符，格式为:**tr [原始字符] [目标字符]**
 
-  - wc命令用于统计指定文本的行数、字数、字节数，格式为 **wc [参数] 文本**
+  ```
+  cat tr.txt | tr [a-z] [A-Z]
+  将tr.txt中的内容转换为大写
+  ```
 
-    ```
-    -l    只显示行数
-    -w    只显示单词数
-    -c    只显示字节数
-    wc -l /etc/passwd
-    ```
+- wc命令用于统计指定文本的行数、字数、字节数，格式为 **wc [参数] 文本**
 
-  - cut命令用于通过列来提取文本字符，格式为：**cut [参数] 文本**
+  ```
+  -l    只显示行数
+  -w    只显示单词数
+  -c    只显示字节数
+  wc -l /etc/passwd
+  ```
 
-    ```
-    -d  分隔符    指定分隔符，默认为Tab。
-    -f    指定显示的列数。
-    -c    单位改为字符
-    cut -d: -f1 /etc/passwd 以：为分割符来切割该文本的第一行
-    ```
+- cut命令用于通过列来提取文本字符，格式为：**cut [参数] 文本**
 
-  - diff diff命令用于比较多个文本文件的差异，格式为：**diff [参数] 文件**
+  ```
+  -d  分隔符    指定分隔符，默认为Tab。
+  -f    指定显示的列数。
+  -c    单位改为字符
+  cut -d: -f1 /etc/passwd 以：为分割符来切割该文本的第一行
+  ```
 
-    ```
-    -b    忽略空格引起的差异。
-    -B    忽略空行引起的差异。
-    --brief或-q    仅报告是否存在差异。
-    -c    使用上下文输出格式。
-    ```
+- diff diff命令用于比较多个文本文件的差异，格式为：**diff [参数] 文件**
+
+  ```
+  -b    忽略空格引起的差异。
+  -B    忽略空行引起的差异。
+  --brief或-q    仅报告是否存在差异。
+  -c    使用上下文输出格式。
+  ```
