--- a/linux/shell/00常见问题.md
+++ b/linux/shell/00常见问题.md
@@ -12,21 +12,25 @@
 
 - . 开头的文件 表示隐藏文件
 
-- Win 10 vmware12 无法打开内核设备“\\.\Global\vmx86”: 系统找不到指定的文件。你想要在安装 VMware Workstation 前重启吗?
+- Win 10 vmware12 无法打开内核设备".\Global\vmx86": 系统找不到指定的文件。你想要在安装 VMware Workstation 前重启吗?
 
 ```
-1. 找到c:\windows\system32\cmd.exe 文件，右击选择以管理员身份运行
-2. 输入以下的命令并回车
+找到c:\windows\system32\cmd.exe 文件，右击选择以管理员身份运行
+
+输入以下的命令并回车
 net start vmci
 net start vmx86
 net start VMnetuserif
-3. 改变vmware几种服务的启动方式为：
+
+改变vmware几种服务的启动方式为：
 sc config vmci start= auto
 sc config vmx86 start= auto
 sc config VMnetuserif start= auto
+
 这一点儿与win7下面的有所不同，特此提醒，win7下面的是：
 sc config vmci=auto
 sc config vmx86=auto
 sc config VMnetuserif=auto
-4. 如果无法运行命令，则从 VMware Workstation安装目录，找到 ：vmci.sys文件并复制到c:\windows\system32\drivers
+
+如果无法运行命令，则从 VMware Workstation安装目录，找到 ：vmci.sys文件并复制到c:\windows\system32\drivers
 ```
