--- a/linux/shell/03显示命令.md
+++ b/linux/shell/03显示命令.md
@@ -2,23 +2,23 @@
 
 - cat [选项] [文件]...
 
-  1. 一次显示整个文件
+  - 一次显示整个文件
 
     ```
     cat fileName
     ```
 
-  2. 从键盘创建一个文件，
+  - 从键盘创建一个文件，
 
     ```
     cat > fileName
     ```
 
-  3. 将几个文件合并为一个文件:
+  - 将几个文件合并为一个文件:
 
-    ```
+  ```
     cat file1 file2 > file
-    ```
+  ```
 
 - 命令参数
 
@@ -37,63 +37,65 @@
 
 - 命令示例
 
-  1. 显示a.log中的内容
+  - 显示a.log中的内容
 
     ```
     cat a.log
     ```
 
-  2. 创建一个新的文件，从建盘输入内容，只有文件不存在的时候，才会创建, 输入完成后以 ctrl + c结束
+  - 创建一个新的文件，从建盘输入内容，只有文件不存在的时候，才会创建, 输入完成后以 ctrl + c结束
 
     ```
     cat > b.log
     abc
     ```
 
-  3. 把 a.log 的文件内容加上行号后输入 c.log 这个文件里
+  - 把 a.log 的文件内容加上行号后输入 c.log 这个文件里
 
     ```
     cat -n a.log > c.log
     ```
 
-  4. cat命令反过来写，功能与cat相反，cat是第一行到最后一行连续显示在屏幕上，而tac则是从最 后一行到第一行显示在屏幕上
+  - cat命令反过来写，功能与cat相反，cat是第一行到最后一行连续显示在屏幕上，而tac则是从最 后一行到第一行显示在屏幕上
 
 # nl
 
-1. nl [选项]... [文件]...
-2. nl命令在linux系统中用来计算文件中行号。nl 可以将输出的文件内容自动的加上行号！其默认的结果与 cat -n 有点不太一样， nl 可以将行号做比较多的显示设计，包括位数与是否自动补齐 0 等等的功能
-3. nl 命令读取 File 参数（缺省情况下标准输入），计算输入中的行号，将计算过的行号写入标准输出。 在输出中，nl 命令根据您在命令行中指定的标志来计算左边的行。 输入文本必须写在逻辑页中。每个逻辑页有头、主体和页脚节（可以有空节）。 除非使用 -p 标志，nl 命令在每个逻辑页开始的地方重新设置行号。 可以单独为头、主体和页脚节设置行计算标志（例如，头和页脚行可以被计算然而文本行不能）。
+- nl [选项]... [文件]...
 
-4. -b ：指定行号指定的方式，主要有两种：
+- nl命令在linux系统中用来计算文件中行号。nl 可以将输出的文件内容自动的加上行号！其默认的结果与 cat -n 有点不太一样， nl 可以将行号做比较多的显示设计，包括位数与是否自动补齐 0 等等的功能
 
-  1. -b a ：表示不论是否为空行，也同样列出行号(类似 cat -n)；
-  2. -b t ：如果有空行，空的那一行不要列出行号(默认值)；
+- nl 命令读取 File 参数（缺省情况下标准输入），计算输入中的行号，将计算过的行号写入标准输出。 在输出中，nl 命令根据您在命令行中指定的标志来计算左边的行。 输入文本必须写在逻辑页中。每个逻辑页有头、主体和页脚节（可以有空节）。 除非使用 -p 标志，nl 命令在每个逻辑页开始的地方重新设置行号。 可以单独为头、主体和页脚节设置行计算标志（例如，头和页脚行可以被计算然而文本行不能）。
 
-5. -n ：列出行号表示的方法，主要有三种：
+- -b ：指定行号指定的方式，主要有两种：
 
-  1. -n ln ：行号在萤幕的最左方显示；
-  2. -n rn ：行号在自己栏位的最右方显示，位数不同的话，不加 0 ；
-  3. -n rz ：行号在自己栏位的最右方显示，位数不同的话，加0对齐 ；
+  - -b a ：表示不论是否为空行，也同样列出行号(类似 cat -n)；
+  - -b t ：如果有空行，空的那一行不要列出行号(默认值)；
 
-6. -w ：行号栏位的占用的位数。
+- -n ：列出行号表示的方法，主要有三种：
 
-7. -p 在逻辑定界符处不重新开始计算。
+  - -n ln ：行号在萤幕的最左方显示；
+  - -n rn ：行号在自己栏位的最右方显示，位数不同的话，不加 0 ；
+  - -n rz ：行号在自己栏位的最右方显示，位数不同的话，加0对齐 ；
 
-8. 命令示例
+- -w ：行号栏位的占用的位数。
 
-  1. 用 nl 列出 log2012.log 的内容
+- -p 在逻辑定界符处不重新开始计算。
+
+- 命令示例
+
+  - 用 nl 列出 log2012.log 的内容
 
     ```
     nl log2012.log
     ```
 
-  2. 用 nl 列出 log2012.log 的内容，空本行也加上行号
+  - 用 nl 列出 log2012.log 的内容，空本行也加上行号
 
     ```
     nl - b a log2012.log
     ```
 
-  3. 让行号前面自动补上0,统一输出格式,nl -b a -n rz 命令行号默认为六位，要调整位数可以加上参数 -w 3 调整为3位。
+  - 让行号前面自动补上0,统一输出格式,nl -b a -n rz 命令行号默认为六位，要调整位数可以加上参数 -w 3 调整为3位。
 
     ```
     # nl -b a -n rz log2014.log
@@ -103,32 +105,32 @@
 
 - 基本命令
 
-  1. more [-dlfpcsu ] [-num ] [+/ pattern] [+ linenum] [file ... ]
-  2. more命令和cat的功能一样都是查看文件里的内容，但有所不同的是more可以按页来查看文件的内容， 还支持直接跳转行等功能
+  - more [-dlfpcsu ] [-num ] [+/ pattern] [+ linenum] [file ... ]
+  - more命令和cat的功能一样都是查看文件里的内容，但有所不同的是more可以按页来查看文件的内容， 还支持直接跳转行等功能
 
 - 命令参数
 
-  1. +n 从笫n行开始显示
-  2. -n 定义屏幕大小为n行
-  3. +/pattern 在每个档案显示前搜寻该字串（pattern），然后从该字串前两行之后开始显示
-  4. -c 从顶部清屏，然后显示
-  5. -d 提示"Press space to continue，'q' to quit（按空格键继续，按q键退出）"，禁用响铃功能
-  6. -l 忽略Ctrl+l（换页）字符
-  7. -p 通过清除窗口而不是滚屏来对文件进行换页，与-c选项相似
-  8. -s 把连续的多个空行显示为一行
-  9. -u 把文件内容中的下画线去掉
+  - +n 从笫n行开始显示
+  - -n 定义屏幕大小为n行
+  - +/pattern 在每个档案显示前搜寻该字串（pattern），然后从该字串前两行之后开始显示
+  - -c 从顶部清屏，然后显示
+  - -d 提示"Press space to continue，'q' to quit（按空格键继续，按q键退出）"，禁用响铃功能
+  - -l 忽略Ctrl+l（换页）字符
+  - -p 通过清除窗口而不是滚屏来对文件进行换页，与-c选项相似
+  - -s 把连续的多个空行显示为一行
+  - -u 把文件内容中的下画线去掉
 
 - 常用操作命令
 
-  1. Enter 向下n行，需要定义。默认为1行
-  2. Ctrl+F 向下滚动一屏
-  3. 空格键 向下滚动一屏
-  4. Ctrl+B 返回上一屏
-  5. = 输出当前行的行号
-  6. ：f 输出文件名和当前行的行号
-  7. V 调用vi编辑器
-  8. !命令 调用Shell，并执行命令
-  9. q 退出more
+  - Enter 向下n行，需要定义。默认为1行
+  - Ctrl+F 向下滚动一屏
+  - 空格键 向下滚动一屏
+  - Ctrl+B 返回上一屏
+  - = 输出当前行的行号
+  - ：f 输出文件名和当前行的行号
+  - V 调用vi编辑器
+  - !命令 调用Shell，并执行命令
+  - q 退出more
 
 - 命令示例
 
@@ -160,59 +162,62 @@
 
 - 基本命令
 
-  1. less [参数] 文件
-  2. less 与 more 类似，但使用 less 可以随意浏览文件，而 more 仅能向前移动，却不能向后移动， 而且 less 在查看之前不会加载整个文件
+- less [参数] 文件
+
+- less 与 more 类似，但使用 less 可以随意浏览文件，而 more 仅能向前移动，却不能向后移动， 而且 less 在查看之前不会加载整个文件
 
 - 命令参数
 
-  1. -b <缓冲区大小> 设置缓冲区的大小
-  2. -e 当文件显示结束后，自动离开
-  3. -f 强迫打开特殊文件，例如外围设备代号目录和二进制文件
-  4. -g 只标志最后搜索的关键词
-  5. -i 忽略搜索时的大小写
-  6. -m 显示类似more命令的百分比
-  7. -N 显示每行的行号
-  8. -o <文件名> 将less 输出的内容在指定文件中保存起来
-  9. -Q 不使用警告音
-  10. -s 显示连续空行为一行
-  11. -S 行过长时间将超出部分舍弃
-  12. -x <数字> 将"tab"键显示为规定的数字空格
-  13. /字符串：向下搜索"字符串"的功能
-  14. ?字符串：向上搜索"字符串"的功能
-  15. n：重复前一个搜索（与 / 或 ? 有关）
-  16. N：反向重复前一个搜索（与 / 或 ? 有关）
-  17. b 向后翻一页
-  18. d 向后翻半页
-  19. h 显示帮助界面
-  20. Q 退出less 命令
-  21. u 向前滚动半页
-  22. y 向前滚动一行
-  23. 空格键 滚动一行
-  24. 回车键 滚动一页
-  25. [pagedown]： 向下翻动一页
-  26. [pageup]： 向上翻动一页
+  ```
+   -b <缓冲区大小> 设置缓冲区的大小
+   -e 当文件显示结束后，自动离开
+   -f 强迫打开特殊文件，例如外围设备代号目录和二进制文件
+   -g 只标志最后搜索的关键词
+   -i 忽略搜索时的大小写
+   -m 显示类似more命令的百分比
+   -N 显示每行的行号
+   -o <文件名> 将less 输出的内容在指定文件中保存起来
+   -Q 不使用警告音
+   -s 显示连续空行为一行
+   -S 行过长时间将超出部分舍弃
+   -x <数字> 将"tab"键显示为规定的数字空格
+   /字符串：向下搜索"字符串"的功能
+   ?字符串：向上搜索"字符串"的功能
+   n：重复前一个搜索（与 / 或 ? 有关）
+   N：反向重复前一个搜索（与 / 或 ? 有关）
+   b 向后翻一页
+   d 向后翻半页
+   h 显示帮助界面
+   Q 退出less 命令
+   u 向前滚动半页
+   y 向前滚动一行
+   空格键 滚动一行
+   回车键 滚动一页
+   [pagedown]： 向下翻动一页
+   [pageup]： 向上翻动一页
+  ```
 
 - 命令示例
 
-  1. 查看文件
+  - 查看文件
 
     ```
     less log2013.log
     ```
 
-  2. ps查看进程信息并通过less分页显示
+  - ps查看进程信息并通过less分页显示
 
     ```
     ps -ef|less
     ```
 
-  3. 查看命令历史使用记录并通过less分页显示
+  - 查看命令历史使用记录并通过less分页显示
 
     ```
     history|less
     ```
 
-  4. 浏览多个文件
+  - 浏览多个文件
 
     ```
     less log2013.log log2014.log
@@ -222,7 +227,7 @@
 
 - 其它
 
-  1. 全屏导航
+  - 全屏导航
 
     ```
     ctrl + F - 向前移动一屏
@@ -231,14 +236,14 @@
     ctrl + U - 向后移动半屏
     ```
 
-  2. 单行导航
+  - 单行导航
 
     ```
     j - 向前移动一行
     k - 向后移动一行
     ```
 
-  3. 其它导航
+  - 其它导航
 
     ```
     G - 移动到最后一行
@@ -246,7 +251,7 @@
     q / ZZ - 退出 less 命令
     ```
 
-  4. 其它有用的命令
+  - 其它有用的命令
 
     ```
     v - 使用配置的编辑器编辑当前文件
@@ -254,7 +259,7 @@
     &pattern - 仅显示匹配模式的行，而不是整个文件
     ```
 
-  5. 标记导航
+  - 标记导航
 
     ```
     当使用 less 查看大文件时，可以在任何一个位置作标记，可以通过命令导航到标有特定标记的文本位置：
