shell for while case at crontab

--- a/linux/shell/01常用基本命令.md
+++ b/linux/shell/01常用基本命令.md
@@ -49,3 +49,9 @@
   sudo poweroff
   sudo reboot
   ```
+
+- read命令用于将用户的输入参数赋值给指定变量，格式为：**read -p [提示语句] 变量名**
+
+  ```
+  read -p "Enter your score:" GRADE
+  ```
