--- a/linux/shell/03显示命令.md
+++ b/linux/shell/03显示命令.md
@@ -35,6 +35,15 @@
   -v, --show-nonprinting   使用 ^ 和 M- 引用，除了 LFD 和 TAB 之外
   ```
 
+- 将cat命令的输出当做一个整体,使用``
+
+  ```bash
+  for UNAME in `cat users.txt`
+  do
+    ...
+  done
+  ```
+
 - 命令示例
 
   - 显示a.log中的内容
