挂载 分区 格式化

--- a/linux/存储结构与磁盘划分.md
+++ b/linux/存储结构与磁盘划分.md
@@ -25,7 +25,7 @@
   /lost+found    当文件系统发生错误时，将一些丢失的文件片段存放在这里
   ```
 
-## 物理设备命名
+# 物理设备命名
 
 - 硬盘由大量的扇区组成，其中第一个扇区保存着主引导记录与分区表信息，单个扇区为512b,其中主引导要占446b,每记录一个分区要 16b,所有最多只能有4个主分区，但是可以是3个主分区加一个扩展分区，而这个扩展分区又可以分为无数个逻辑分区，就可以用逻辑分区来 完成多分区的需求了。
 
@@ -53,7 +53,7 @@
   - 最后5代表它是逻辑分区。
   - 简单来讲:"这是第一块硬盘设备中编号为5的逻辑分区"
 
-## 文件系统与数据资料
+# 文件系统与数据资料
 
 - 常见的文件系统，Ext3, Ext4, XFS
 
@@ -72,3 +72,165 @@
 
   - 情况一：文件体积很小（1K），那么依然会占用一个block，潜在的浪费3K。
   - 情况二：文件体积很大（5K），那么会占用两个（5K-4K剩下的1K也要占用一个block）。 一个inode大小仅为128bytes（Ext3），但记录一个block则消耗4bytes，当写inode被占满后会取出一个block用于号码记录而不再是保存实际的文件系统
+
+# 挂载
+
+- 挂载操作指的是当用户需要使用硬盘设备或分区数据时，需要先将其与一个已存在的目录文件做关联，而这个动作就叫"挂载"
+
+- mount命令用于挂载文件系统，格式为："mount 文件系统 挂载目录"
+
+  - -a 挂载所有在/etc/fstab中定义的文件系统
+  - -t 指定文件系统的类型
+
+- mount命令只需要填写设备与挂载目录参数即可，一般来讲系统会自动去判断要挂载文件的类型
+
+- 如果需要将设备"/dev/sdb2"挂载到"/backup"目录，文件格式为ext4
+
+  ```bash
+  mount /dev/sdb2 /backup
+  #不用指定格式
+  ```
+
+- 使用mount命令执行挂载操作后立即就可以使用该文件系统了，但重启后则失效。如果想让重启后依然生效，我们就必须将挂载信息按照指定的格式写入到/etc/fstab文件中。 "/etc/fstab"包含着文件系统与挂载信息等内容，因为过于重要，所以只有root用户才可以编辑它
+
+- 填写格式如下："设备文件 挂载目录 格式类型 权限选项 自检 优先级"
+
+  - 设备文件：一般为设备的路径+名称，也可以写UUID值等。
+  - 挂载目录：指定要挂载到的目录，需挂载前创建好。
+  - 格式类型：即指定文件系统的格式，比如有ext3/ext4/xfs/iso9660/swap等。
+  - 权限选项：默认为defaults(rw,suid,dev,exec,auto,nouser,async)，可指定acl或quota等。
+  - 自检：若为1则开机后进行磁盘自检，0为不自检。
+  - 优先级：若"自检"为1，则可对多块硬盘进行优先级设置。
+
+- 定义设备"/dev/sdb2"开机自动挂载到"/backup"目录，文件格式为ext4，默认权限且无需开机自检
+
+  ```
+  /dev/sdb2  /backup ext4 defaults 0 0
+  ```
+
+- umount命令用于撤销已经挂载的设备文件，格式为："umount [挂载点/设备文件]
+
+  ```
+  unmount /dev/sdb2
+  ```
+
+# 添加硬盘设备
+
+- 当全新安装了一块新的硬盘设备后，为了更充分、安全的利用硬盘空间首先要进行磁盘的分区，然后格式化，最后挂载使用
+
+## 创建分区
+
+```bash
+  #查看所有硬盘，包括没有挂载
+  fdisk -l
+
+  # 输入p查看当前分区详情
+  p
+  Disk /dev/sdb: 5 GiB, 5368709120 bytes, 10485760 sectors
+  Units: sectors of 1 * 512 = 512 bytes
+  Sector size (logical/physical): 512 bytes / 512 bytes
+  I/O size (minimum/optimal): 512 bytes / 512 bytes
+  Disklabel type: dos
+  Disk identifier: 0x0c114c38
+
+  #输入n新建新的分区
+  n
+  Partition type
+   p   primary (0 primary, 0 extended, 4 free)
+   e   extended (container for logical partitions)
+
+  #选择分区类型
+  Select (default p):p
+
+  #设置分区号，一般情况下是3主分区，一个逻辑分区
+  分区号 (1-4, default 1): 1
+
+  #磁盘的起始扇区，直接回车即可：
+  First sector (2048-10485759, default 2048):2048
+
+  #键入+2G，代表该分区的大小为2G
+  Last sector, +sectors or +size{K,M,G,T,P} (2048-10485759, default 10485759): +2G
+
+  #敲击字符w，将上述分区信息保存
+  w
+  The partition table has been altered.
+  Calling ioctl() to re-read partition table.
+  Syncing disks.
+
+  #让内核同步分区信息（此步骤仅在没有找到分区设备的情况下才需要执行，非必要动作。）：
+  partprobe
+```
+
+## 格式化为xfs文件系统
+
+- 在Linux系统中用于格式化的命令是mkfs，它支持的文件类型有：cramfs,ext2,ext3,ext4,fat,msdos,xfs,btrfs,minix,vfat
+
+- 使用方法非常的简单："mkfs.文件类型名称"，例如要格式分区为ext4，则命令为"mkfs.ext4 硬盘分区名称"
+
+  ```bash
+  #将上面的分区格式化为ext4文件系统
+  mkfs.ext4 /dev/sdb1
+  ```
+
+## 将硬盘挂载在目录中
+
+- 将硬盘设备挂载到/newFS目录
+
+  ```bash
+  mkdir /newFS
+  mount /dev/sdb1 /newFS/
+  ```
+
+## 设置系统启动后自动挂载该硬盘设备
+
+- 编缉fstab文件
+
+  ```bash
+  vim /etc/fstab
+  /dev/sdb1 /newFS ext4 defaults 0 0
+  # 我们现在就可以通过访问/newFS目录来使用硬盘资源
+  ```
+
+## 查看硬盘的使用情况
+
+- df命令用于查看挂载点信息与磁盘使用量，格式为："df [选项] [文件]"
+
+- 参数
+
+  - -a 显示出所有的文件系统（包括虚拟的）
+  - --total 展出出总体使用量
+  - -h 更易读的容量格式如1K,234M,2G...
+  - -i 展示出Inode的信息（默认是磁盘使用信息）
+  - -T 显示出文件系统的类型
+
+- 查看挂载信息与硬盘使用量:"df -h"
+
+  ```
+  df -h
+  文件系统        容量  已用  可用 已用% 挂载点
+  udev            973M     0  973M    0% /dev
+  tmpfs           199M  6.3M  193M    4% /run
+  /dev/sda1        18G  4.8G   12G   29% /
+  tmpfs           992M  212K  992M    1% /dev/shm
+  tmpfs           5.0M  4.0K  5.0M    1% /run/lock
+  tmpfs           992M     0  992M    0% /sys/fs/cgroup
+  tmpfs           199M   52K  199M    1% /run/user/1000
+  /dev/sr0        1.4G  1.4G     0  100% /media/rancune/Ubuntu 16.04 LTS amd64
+  /dev/sdb1       2.0G  3.0M  1.8G    1% /newFS
+  ```
+
+- du命令用于查看磁盘的使用量，格式为：" du [选项] [文件]"
+
+- 参数
+
+  - -a 评估每个文件而非目录整体占用量。
+  - -c 评估每个文件并计算出总占用量总和。
+  - -h 更易读的容量格式如1K,234M,2G...
+  - -s 仅显示占用量总和。
+
+- 查看newFS中文件所占空间
+
+  ```
+  du -sh /newFS/
+  20K    /newFS/
+  ```
