--- a/linux/存储结构与磁盘划分.md
+++ b/linux/存储结构与磁盘划分.md
@@ -234,3 +234,89 @@
   du -sh /newFS/
   20K    /newFS/
   ```
+
+# swap分区
+
+- SWAP即交换分区是一种类似于Windows系统虚拟内存的功能，将一部分硬盘空间虚拟成内存来使用，从而解决内存容量不足的情况，因为SWAP毕竟是用硬盘资源虚拟的，所以速度上比真实物理内存要慢很多，一般只有当真实物理内存耗尽时才会调用SWAP
+
+- 创建swap分区
+
+  ```bash
+  # 新建分区同上
+  # ...
+
+  # 修改分区类型，输入t
+  t
+  Selected partition 1
+
+  # 查看可用的分区类型
+  Hex code (type L to list all codes): L
+
+  #输入swap分区类型
+  Hex code (type L to list all codes): 82
+
+  #查看分区信息
+  p
+
+  #保存
+  w
+
+  #格式化为swap分区
+  mkswap /dev/sdb1
+
+  #启动swap分区
+  swapon /dev/sdb1
+
+  # 设置为开机后自动挂载该SWAP分区设备
+  vim /etc/fstab
+  /dev/sdb1 swap swap defaults 0 0
+
+  #查看当前的内存容量
+  free -m
+  ```
+
+# 磁盘冗余阵列（RAID）
+
+- Redundant Array of Independent Disks，即独立的硬盘组，作用是防止硬盘物理损坏以及增加存储设备的吞吐量。RAID常见的组合有0、1、5和10
+
+- RAID0:需要至少两块(含)硬盘，可以有效的提高硬盘的性能和吞吐量，但没有数据的冗余和错误修复能力，将多块硬盘通过硬件或软件的方式串联在一起，成为一个大的卷集，将数据依次写入到各个硬盘中，这样性能会极大提升，但若任意一块硬盘故障则整个系统的数据都会受到破坏。
+
+- RAID1:需要至少两块(含)硬盘，可以有效的提高数据资料的安全性和可修复性，但成本却提高了，实现原来是在数据写入硬盘时也会在另外一块闲置的硬盘上生成镜像文件，在不影响性能的情况下最大限度保证数据资料的可靠性，只要在一对镜像盘中还有一块硬盘可以使用，那么数据也不会丢失，具有很好的硬盘冗余能力，虽然对数据来讲绝对的安全，但成本却明显增加，磁盘利用率仅为50%
+
+# 逻辑卷管理
+
+# 磁盘容量配额
+
+- quota的磁盘配额可以限制用户的硬盘可用空间或最大创建文件数量，并且还有软/硬限制的区别：
+
+  - 软限制:当达到软限制时会提示用户，但允许用户在规定期限内继续使用。
+  - 硬限制:当达到硬限制时会提示用户，且强制终止用户的操作
+
+# 虚拟文件系统
+
+- 随着计算机系统的发展产生出了众多的文件系统，为了使用户在读取或写入文件时不用关心底层的硬盘结构，于是在Linux内核中的软件层为用户程序提供了一个文件系统接口(VFS,Virtual File System)，这样就转而统一对这个虚拟文件系统进行操作啦。即实际文件系统在VFS下隐藏了自己的特性和细节，使得我们在日常使用时觉得"文件系统都是一样的"。
+
+# 软硬方式链接
+
+- 硬链接(hard link)可以被理解为一个"指向原始文件inode的指针"，系统不为它分配独立的inode与文件，所以实际上来讲硬链接文件与原始文件其实是同一个文件，只是名字不同。于是每添加一个硬链接，该文件的inode连接数就会增加1，直到该文件的inode连接数归0才是彻底删除。概括来说因为硬链接实际就是指向原文件inode的指针，即便原始文件被删除依然可以通过链接文件访问，但是不能跨文件系统也不能链接目录文件
+
+- 软链接也称为符号链接（symbolic link）即"仅仅包含它索要链接文件的路径名"因此能做目录链接也可以跨越文件系统，但原始文件被删除后链接文件也将失效，如同Winodw™中的"快捷方式"
+
+- ln命令用于创建链接文件，格式为："ln [选项] 目标"，**默认创建的是硬链接**
+
+- 命令参数
+
+  - -s 创建"符号链接"(默认是硬链接)
+  - -f 强制创建文件或目录的链接
+  - -i 覆盖前先询问
+  - -v 显示创建链接的过程
+
+- 示例
+
+  ```bash
+  #创建一个/usr/hb/的软链接
+  ln -s /usr/hb/ /home/hb_link
+
+  #删除软链接使用rm命令，注意，其末尾不能加“/”
+  rm -rf /home/hb_link
+  ```
