--- a/linux/shell/01常用基本命令.md
+++ b/linux/shell/01常用基本命令.md
@@ -46,7 +46,7 @@
 - sudo sudo是superuser do的简写，sudo是linux系统管理指令，是允许系统管理员让普通用户 执行一些或者全部的root命令的一个工具，如halt，reboot，su等等。这样不仅减少了root用户的 登陆 和管理时间，同样也提高了安全性
 
   ```
-  sudo poweroff
+  sudo shutdown
   sudo reboot
   ```
 
