--- a/linux/shell/02文件相关命令.md
+++ b/linux/shell/02文件相关命令.md
@@ -9,6 +9,7 @@
   -d    仅看目录本身
   -h    易读的文件容量（如k,m,g）
   -l    显示文件的详细信息
+  -all  查看全部文件及其权限
   ```
 
 # cd
@@ -21,17 +22,9 @@
 
 - 进入系统根目录
 
-  1. 方法1:
-
-    ```
-    cd /
-    ```
-
-  2. 方法2:
-
-    ```
-    cd //
-    ```
+  ```
+  cd /
+  ```
 
 - 进入用户的根目录
 
