--- a/linux/用户身份与文件权限.md
+++ b/linux/用户身份与文件权限.md
@@ -30,7 +30,7 @@
 
   - r(Read，读取)：对文件而言，具有读取文件内容的权限；对目录来说，可以读取目录结构和权限
   - w(Write,写入)：对文件而言，具有编辑、新增、修改文件内容的权限；对目录来说，可以更改目录结构列表，具有新增、删除、移动目录内文件的权限。
-  - x(Execute，执行)：对文件而言，具有执行文件的权限；对目录了来说该用户具有进入目录的权限。
+  - x(Execute，执行)：对文件而言，具有执行文件的权限；**对目录了来说该用户具有进入目录的权限,进入目录的权限是x**
   - 一般权限示例
 
     ```
