--- a/book/effective java/1.创建销毁对象.md
+++ b/book/effective java/1.创建销毁对象.md
@@ -124,3 +124,63 @@ public enum SingleTon {
     }
 }
 ```
+
+## 私有构造函数
+
+- 如果一个类不应当被初始化，就应当把它的构造函数变为私有的
+
+
+## 避免创建不必要的对象
+
+- 一般来说最好能够重用对象，而不是创建新的对象
+- 避免创建不必要的对象的一种常见的情况就是：**如果一个类中的某个成员只用创建一次，可以采用static代码块来初始化**
+- **应当优先使用基本类型，而不是基本类型的包装类**，要当心无意识的自动包装
+- 创建一些小对象，一般来说代价是非常低的，**如果不能将性能显著的提高到已经达到的水平，那么一般来说是没有必要使用延迟初始化，对象池等技巧的**，
+ 使用这些反而会降低代码的可读性，增加内存的占用等
+
+
+## 消除过期对象的引用
+
+- 只要类是自己管理内存，那么就应当警惕内存泄露问题
+- 当一个对象不再使用时，那么应当把这个对象设置为null,但要记住的是，**清空对象的引用是一种例外，而不是一种规范行为**，
+ 也就是说一般情况下我们是没有必要清空对象引用的，只有是自己管理内存时才需要
+- 内存泄露的一个常见来源是缓存，常见的解决办法有两种：1. 使用WeakHashMap,但要记住的是，只有当所要的缓存项的生命周期是
+ 由该键的外部引用而不是值决定时，WeakHashMap才有用处;2.定时清理没用的项
+- 内存泄露的另一个常见来源是监听器和回调，一方面，**注册了回调，那么就应当取回调**，另外一种确保回调被垃圾回收的方式就是采用弱引用
+
+
+## 避免使用finalize()的方法
+
+- finalize()方法，**一方面jvm不能保证finalize()方法能够及时的被执行，jvm甚至不能保证finalize()方法一定会被执行**，
+ 另一方面使用finalize()方法可能会造成性能上的损失
+- 如果要做释放工作，我们应当自定义释放方法，并且释放方法一般情况下会和try-finally合在一起使用
+- 使用finalize()主要的情形有：1.充当一个保护屏障，如果前面忘了调用释放方法，可以在finalize()方法中调用，迟一点调用总比不调用要好，
+ 2.另一种情况主要与native方法对象有关
+- **如是自己定义了finalize()方法，那么必须显示的调用super.finalize()方法**
+- 为了防止自定了finalize()方法，而忘记调用super.finalize(),可以采用finalizer guardian的技巧，也就是在类中定义一个继承自Object的匿名对象，
+ 并且重写匿名对象的finalize（）方法，重写的方法主要用来释放外部对象，并且没有必要调用super.finalize(),因为继承自Object的finalize()方法是可有可无的，
+ 它的唯一作用就是终结它的外部类，并且外部类不用自定义finalize()方法
+- **对于每一个带有终结方法的非final公有类，都应当采用这种finalizer guardian的技巧**
+
+```java
+@Override
+protected void finalize() throws Throwable {
+    try {
+        //...自定义的finalize()方法
+    } finally {
+        super.finalize();
+    }
+}
+```
+
+```java
+public class Foo {
+
+    private final Object finalizeGuardian = new Object() {
+        @Override
+        protected void finalize() throws Throwable {
+            //... 释放外部的Foo对象
+        }
+    }
+}
+```
