effective java 对象通用的方法02

--- a/book/effective java/2.对象通用方法.md
+++ b/book/effective java/2.对象通用方法.md
@@ -16,6 +16,7 @@
 - 一致性，对于非null的x,y,只要在equals()方法中所用到的对象信息没有发生变化，那么x.equals(y)的结果就应当不变
  也就是说equals的判断中所用的值域不要使用不可靠的资源
 - 非空性，对于非null的x,x.equals(null)一定为false
+- **最好情况下通过继承来重写equals,而是通过组合产生新来对象，来重写equals方法**
 - 一般情况下，自反性和非空性都比较好满足，所以比较重要的就是对称，传递和一致性
 
 ### 注意点
@@ -109,3 +110,63 @@ public int hashCode() {
     return result;
 }
 ```
+
+
+## toString()方法
+
+### toString()方法原则
+
+- 一般情况下我们都要自定义toString()，方便打印
+- 如果我们的toString()指定了格式，那么就应当严格遵守，如果没有指定，那么最好在注释中提示这只是一个简单的描述
+- 无论我们是否指定格式，那么**对于toString()返回值中所包含的信息，都应当提供访问途径**
+
+
+## clone()方法
+
+### clone()方法原则
+
+- 实际上**clone()就是另外一个构造器，必须确保对clone()出来对象的修改不会伤害到原始的对象**，
+ 并且能够正确的创建被clone()对象中的约束条件
+- 通过实现Cloneable接口，clone()方法返回对象的一个拷贝
+- x.clone() != x
+- 一般情况下，x.clone.getClass() == x.getClass()
+- 一般情况下，在逻辑上，x.clone().equals(x)，当然这也不是一个硬性要求
+
+### 使用方法
+
+- 实现clone()方法的一个原则就是，先调用super.clone()方法，把结果对象中的所有域都设置成它们的初始状态，
+ 然后调用方法来重新产生对象的状态
+- clone()在构造的过程中，**不应当调用新对象中任何非final的方法**，也就是说有**不能调用有可能被覆盖的方法**
+- 我们应当不用或都尽量少的使用clone()方法，如果有需求，那么应当提供拷贝构造函数，或者拷贝静态工厂函数
+
+```java
+public Yum(Yum yum);
+
+public static Yum newInstance(Yum yum);
+```
+
+
+## 考虑实现Comparable接口
+
+### Comparable接口原则
+
+```java
+public interface Comparable<T> {
+    int compareTo(T t);
+}
+```
+
+- 将对象与指定对象比较，当对象小于、等于、大于指定对象时，分别返回-1,0,1
+- sgn(x.compareTo(y)) = - sgn(y.compareTo(x))
+- x.compareTo(y) > 0, y.compareTo(z) > 0, 那么 x.compareTo(z) > 0
+- x.compareTo(y) == 0, 那么sgn(x.compareTo(z)) == sgn(y.compareTo(z))
+- 一般情况下， (x.compareTo(y) == 0) == (x.equals(y))
+
+
+### Comparable注意事项
+
+- 与equals方法一样，无法在用新的值组件扩展可实例化对象的同时，保持compareTo的约定，
+ 所以**如果想为一个实现了Comparable接口的类增加值组件，那么不要扩展这个类，而是要编写一个不相关的类，其中包含第一个类的实例，然后提供一个视图方法来返回这个实例**
+- compareTo接口中域的比较是顺序的比较，而不是等同性的比较
+- 从**最关键的域开始，逐步进行到所有重要的域，一旦某个域的比较产生了非零的结果，则整个比较结束**
+- 在使用int result = a - b,result与0进行比较的时候，特别要注意有可能result超过int的范围，而产生不正确的结果
