effective java 类与接口03

--- a/book/effective java/3.类与接口.md
+++ b/book/effective java/3.类与接口.md
@@ -94,7 +94,52 @@ public static final Thing[] values() {
  因为在性能上重新初始化并没有带来很大的优势
 
 
+
+
 ## 复合优先于继承
 
+### 继承的劣势
+
+- 类继承，与方法调用不同，继承打破了封装性
+- 导致子类脆弱的一个原因，就是我们在重写超类的方法时，**依赖于我们对于超类方法实现细节的了解**
+ 另一方面，哪怕我们在子类中只增加新的方法而不重写超类方法，也有可能因为将来超类新增与子类同签名的方法而出现问题
+
+### 使用复合
+
+- 不扩展现有的类，而是在**新的类增加一个引有现有类实例的私有成员变量，然后将私有成员变量的功能转发出去**。
+- 复合更好的形式是，**新增的类和想要扩展的类实现了同样的接口**，就是一个“装饰者模式”
+
+### 复合 VS 继承
+
+- 使用复合而不是继承，可以**避免暴露类具体的实现细节**
+- 复合类可以隐藏想要扩展的类中有缺陷的API
+- **只有当子类与超类之间确实存在子类型关系的时候，才使用继承**
+- 当超类与子类在不同的包时，又或者超类并不是为了继承而设计的，使用继承会导致新的类很“脆弱”
+- 使用复合而不是继承，特别是包装类与原来的类实现相同的接口时，会使包装类更加健壮，也更加的强大
 
 
+
+
+## 要么为继承设计，并提供文档，要么就禁止继承
+
+### 专为继承而设计的类
+
+- 该**类必须有文档描述它可以被Override的方法的自用性**，也就是对于每个public或者protected或构造函数，
+ 它文档必须指明该方法或者构造函数调用了哪些可以Override的方法，是以什么顺序用的，每个调用的结果又是如何影响
+ 后续的处理结果的。
+- **类必须通某种方式提供合适的钩子**，以使能够进入到它的内部工程流程中，这种形式可以是精心选择的protected方法或者域
+- 对于可能被广泛使用的专为继承的类，对于文档中所说明的自用性，以及对于其protected的方法和成员变量所隐含的实现策略，
+ 实际上已经**做了永久承诺**，所以在发布类之前必须编写类进行测试
+- 对于专为继被而生的类，**构造函数中绝对不能调用可以被Override的方法，也就是构造函数中只能调用final方法**
+- 对于专为继被而生的类，**如果实现了Serializable或者Cloneable接口，那么无论是clone()还是readObject()方法，**
+ **无论直接还是间接都不能够调用可以被Override的方法**
+- 对于专为继承而生的类，如果**继承了Serializable,如果类有一个readResolve或者有writeReplace,那么这两个方法必须是protected,不能是private的**，
+ 否则子类会忽略掉这两个类
+
+### 最佳实践
+
+- **对于那些并非为了安全地进行子类化而设计和编写文档的类，要禁止子类化**，原理是final类，或者包访问级别，private的构造函数，并提供静态工厂方法
+- **使用复合而非继承，使用包装类**
+- 对于一般的**可以被继承却又没有专门为子类化设计的类来说，最好不要调用它的任何可能被Override的方法**，解决方法一种手动是消除类中可Override方法的自用性，
+ 另外一种方法就是**将每个可以被Override方法中的代码转移到一个private的辅助方法中，并且让每个可以被Override的方法调用它的私有辅助方法**，
+ 然后**用“直接调用可以被Override的私有辅助方法”来代替“可Override方法的自用调用”**
