effective java 类与接口04

--- a/book/effective java/3.类与接口.md
+++ b/book/effective java/3.类与接口.md
@@ -143,3 +143,221 @@ public static final Thing[] values() {
 - 对于一般的**可以被继承却又没有专门为子类化设计的类来说，最好不要调用它的任何可能被Override的方法**，解决方法一种手动是消除类中可Override方法的自用性，
  另外一种方法就是**将每个可以被Override方法中的代码转移到一个private的辅助方法中，并且让每个可以被Override的方法调用它的私有辅助方法**，
  然后**用“直接调用可以被Override的私有辅助方法”来代替“可Override方法的自用调用”**
+
+
+
+
+## 接口优先于抽象类
+
+### 接口相比抽象类的优势
+
+- 现有的类可以很容易的被更新，以实现新的接口
+- **接口是混合类型的理想选择**，类除了是它继承的基本类型外，还可以是其它类型
+- **接口允许我们构造非层次结构的类型框架**，很多时候，有些事物不能整齐的组织成一个严格的层次结构，使用接口更加合理，
+ 比如作曲与歌唱，不是所有的都会作曲，也不是所有的都会歌唱，但是也有者都会存在的情况，继承不同的接口，更加合理
+
+### 骨架实现
+
+- 通过对你导出的每个重要接口都提供一个抽象的骨架实现类（**一般情况下是一个抽象类**），可以把接口和抽象类的优点结合起来，比如SimpleGestureListener
+ 如果设计得当，可以让程序员很容易提供他们自己的实现
+- 骨架实现它为抽象类提供了实现上的帮助，但又不强加“抽象类被用作类型定义时”所特有的严格限制
+- 骨架实现实际上是为了继承的目的而设计的
+
+### 模拟多重继承
+
+- 一个类实现一个接口，这个类又把对接口方法的调用，转发到一个内部私有类的实例上，这个内部私有类又扩展了骨架实现，与装饰者模式密切相关
+
+### 简单实现
+
+- 实现了接口，但又不是抽象的，它是最简单的可能的有效实现，可以原封不动的使用，也可以将它子类化
+
+### 接口相对于抽象类的缺点
+
+- **抽象类的演变相对于接口的演变要容易的多**，比如接口新增了一个方法，那么所有它的子类都必须要修改代码，实现新的方法
+ 而**抽象类可以随便增加方法，只要在抽象类中包含默认的合理实现即可**
+- **接口通常是定义允许多个实现的类型的最佳途径**
+- 如果**类的演变性比灵活性和功能性更加重要的话**，也就是超类可能多次修改的话，**抽象类比接口更加合理**
+- 接口必须谨慎的定义，并且**如果设计了一个重要的接口，一般情况下就要提供骨架实现**，
+ **这样当接口变化时，一般修改骨架实现即可，不用修改所有使用了骨架实现的代码**
+
+
+
+
+## 接口只被用来类型定义
+
+- **接口只用来定义类型**，类实现接口后，接口就可以充当引用这个类的实例的类型
+- **不要使用常量接口**，也就是在一个接口中只提供了static final 的成员变量，而没提供方法
+- **常量**最好**使用不能被初始化的工具类来提供**，如果工具类分为很多具体的类型的话，可以使用public static final内部类来区别
+
+
+
+
+
+## 类层优先于标签类
+
+### 标签类
+
+- 就是在一个类的内部有一个标签成员tag, tag成员如果是不同类型的话，使用不同的成员变量,其它很多成员用不到
+- 标签类过于冗余，容易出错，并且效率低下
+
+```java
+class Figure {
+  enum Shape {
+    RECTANGLE,CIRCLE
+  };
+
+  final Shape shape;
+
+  //只有当Shape是RECTANGLE才会用到
+  double width;
+  double height;
+
+  //只有当Shape是CIRCLE才会用到
+  double radius;
+
+  Figure(double radius) {
+    shape = CIRCLE;
+    this.radius = radius;
+  }
+
+  Figure(double width, double height) {
+    shape = RECTANGLE;
+    this.width = width;
+    this.height = height;
+  }
+
+  double area() {
+    switch (shape) {
+      case RECTANGLE:{
+        return width * height;
+      }
+      case CIRCLE:{
+        return Math.PI*radius*radius;
+      }
+      default:{
+        throw new AssertionError();
+      }
+    }
+  }
+}
+```
+
+### 将标签类转换为类层次
+
+- 首先为标签类中每个方法都定义一个包含抽象方法的抽象类，并且包含公共的成员变量
+- 使用继承实现类层次
+
+```java
+abstract class Figure {
+  abstract double area();
+}
+
+class Circle extends Figure {
+  final double radius;
+
+  Circle(double radius) {
+    this.radius = radius;
+  }
+
+  @Override
+  double area() {
+    return Math.PI*radius*radius;
+  }
+}
+
+class Rectangle extends Figure {
+  final double width;
+  final double height;
+
+  Rectangle(double width, double height) {
+    this.width = width;
+    this.height = height;
+  }
+
+  @Override
+  double area() {
+    return width * height;
+  }
+}
+```
+
+### 相比较标签类的优点
+
+- 代码清楚
+- 每个类都只有自己的数据，不受其它数据的影响
+- 不太可能遗漏switch语句
+- 自己扩展起来方便
+- 可以更好的反应类的层次结构和关系，有利于编译期境进行类型检查
+
+
+
+
+## 用函数对象表示策略
+
+### 函数对象
+
+- 类似于C++中的函数指针
+- 不包含成员变量，只表示一个操作
+
+```java
+class StringLengthComparator {
+  public int compare(String s1, String s2) {
+    return s1.length() - s2.length();
+  }
+}
+```
+
+### 函数对象的优点以及使用技巧
+
+- 一般情况下，**常与策略设计模式**一起使用
+- **一般还要设计一个策略接口**
+- 很多不同的地方，可以使用同一个对象
+- 如果**只在一个地方使用，一般用匿名对象**
+- **如果有多个地方使用，一般将类实现为私有的静态成员类，并通过公有的静态final成员变量导出**
+
+```java
+public interface Comparator<T> {
+  int compare(T t1, T t2);
+}
+
+class Host {
+
+  private static class StrLenCmp implements Comparator<String> {
+
+    @Override
+    public int compare(String s1, String s2) {
+       return s1.length() - s2.length();
+    }
+  }
+
+  public static final Comparator<String> STRING_LENGTH_COMPARATOR = new StrLenCmp();
+}
+```
+
+
+
+
+## 优先考虑静态成员类
+
+### 嵌套类
+
+- 静态内部类，非静态内部类，匿名类，局部类
+- 静态内部类不包含外部类的引用
+- 非静态内部类包含外部引用
+- 匿名类除了在声明时，无法实例化，不能使与类名有关的行为（比如instanceOf）,不能实现类，接口，也不能扩展类，也不能拥有静态成员
+ 也不能太复杂，否则会影响阅读，一般情况下最好不要超过10行,常用的比如函数对象，回调等
+- 局部类，出现在可以定义局部变量的地方，生命周期也一样，可以有名字，可以被重复使用，在非静态环境下有外部类的引用，不能有静态成员，不能太复杂
+
+### 嵌套类的使用技能
+
+- 如果一个类太长了，或者在方法之外仍然可见，考虑成员类
+- 优先考虑静态成员类,只有类的每一个实例都需要一个指向其外围实例时，才使用非静态成员类
+- 如果这个类属于一个方法的内部，并且只有一个地方需要它，并且已经有一个预置的类型可以说明这个类的特点，使用匿名名，否则使用局部类
+
+
+
+
+
+
+
+
