thinking in java 泛型03

--- a/book/thinking in java/01 泛型.md
+++ b/book/thinking in java/01 泛型.md
@@ -289,6 +289,104 @@ class Hamster extends  ComparablePet {
 }
 ```
 
+## 自限定类型
+
+### 循环泛型,也就是泛型参数与正在定义的类型相关联
+
+```java
+class GenericType <T> {}
+
+class CuriouslyRecurringGeneric extends GenericType<CuriouslyRecurringGeneric>
+```
+
+- 循环泛型类型，其含义是，定义一个泛型类，泛型参数是自身或者子类
+
+- 循环泛型类型的本质：**基类用导出类替换其参数**，这意味着泛型基类变成了一种其所有导出类的公共功能的模板
+ 但是**这些功能对于其参数和返回类型，将使用导出类型，也就是说，在所产生的类中将使用确切类型而不是基类型**
+
+### 自限定
+
+```java
+class SelfBounded <T extends SelfBounded<T>>
+
+class A extends SelfBounded<A> {}
+```
+
+- 自限定的本质：**可以保证类型参数与正在被定义的类相同**，也就是说，**我正定义一个泛型类，其类型参数就是我本身**
+- 如果使用了自限定,就应当了解这个类所用的类型参数与使用这个参数的类具有相同的基类型
+- 如果泛型方法使用了自限定,可以防止这个方法被应用于除上述形式的自限定参数之外的其它任何事务上
+
+```java
+public static <T extends SelfBounded<T>> T f (T arg) {
+    return arg.set(arg).get();
+}
+
+A a = f(new A());
+```
+
+### 协变类型
+
+- 返回类型协变：Override方法可以返回父类中返回类型的子类
+
+```java
+class Base {
+     Base get() {
+         return this ;
+    }
+}
+
+class Derived extends Base {
+
+    @Override
+     Derived get() {
+         return this ;
+    }
+}
+```
+
+- 一般情况下，非泛型代码中，参数类型不能随子类型发生变化,在下面的例子中，Derived中两个方法都是存在的，
+ 并且 set(Base base)与set(Derived derived)两者之间的关系是重载的
+
+```java
+class Base {
+     void  set(Base base) {
+        System.out.println("BaseSetter.set(Base)");
+    }
+}
+
+class Derived extends Base {
+
+    @Override
+    void  set(Base base) {
+        System.out.println("DerivedSetter.set(Base)");
+    }
+
+    void  set(Derived derived) {
+        System.out.println("DerivedSetter.set(derived)");
+    }
+}
+```
+
+- 如果**使用的自限定类型**，那么在**导出类中只有一个方法**，并且这个**方法接受导出类类型而不是基类型作为参数**
+
+```java
+interface SelfBoundedSetter <T extends SelfBoundedSetter<T>> {
+    void set(T arg);
+}
+
+interface Setter extends SelfBoundedSetter<Setter> {}
+
+Setter s1 = new Setter();
+Setter s2 = new Setter();
+SelfBoundedSetter s = new SelfBoundedSetter();
+
+s1.set(s2);
+
+// compile error,Setter中实际上只接受自己作为参数，不接受基类作为参数
+//s1.set(s);
+
+```
+
 ## 代码注意
 
 - 泛型方法优于泛型类
