thinking in java 泛型04

--- a/book/thinking in java/10 泛型.md
+++ b/book/thinking in java/10 泛型.md
@@ -387,6 +387,120 @@ s1.set(s2);
 
 ```
 
+## 泛型与异常
+
+- **catch 语句不能捕获泛型类型的异常**，因为在编译和运行期间必须知道确切的类型
+- **泛型类也不能直接或间接继承自Throwable,因为这将进一步阻止你去定义不能捕获的异常**
+- 类型参数可能会在一个方法的throws子句中用到
+
+```java
+interface Processor<T, E extends Exception> {
+    void process(List<T> resultCollector) throws E;
+}
+
+class ProcessRunner <T , E extends Exception> extends ArrayList<Processor<T,E>>{
+    List<T> processAll () throws E {
+        List<T> result = new ArralyList<>();
+        for (Processor<T, E> processor : this) {
+            processor.process(result);
+        }
+        return result;
+    }
+
+}
+```
+
+## 混型
+
+- 混型就是混合多个类的功能，以产生一个能够表示混型中所有类型的类，**相当于多重继承**
+- java中混型主要使用**interface和组合**实现混型
+  - 构造一个新的类，extends最重要的类
+  - 实现其它的接口，并且想要混型的类也实现对应的接口
+  - 然后在类中保留每一个想要混型的类的对象，最后通过转发每个成员的功能达到混型的效果
+- 另外一种混型方式：**能过一步一步的装饰者模式达到混型的效果**
+- 动态代理的方法
+
+## 潜在类型机制
+
+- 潜在类型机制，又称作**鸭子类型机制：如它它走起来像鸭子，并且叫起来也像鸭子，那么你就可以将它当作鸭子对待**
+- java中如果想用泛型实现潜在类型机制，那么必须能过interface和边界来实现
+
+```java
+interface Speak{
+    void speak();
+}
+
+class DogSpeaker extends Dog implements Speak {
+
+    public void speak() {
+        print("Wang!");
+    }
+}
+
+class CatSpeaker extends Cat implements Speak {
+
+    public void speak() {
+        print("Miao!");
+    }
+}
+
+class Communicate {
+    public static <T extends Speak>  void perform(T performer) {
+        performer.speak();
+    }
+}
+
+Communicate.perform(new CatSpeaker());
+Communicate.perform(new DogSpeaker());
+```
+
+- 另外一种方式是使用反射
+
+```java
+class Mime {
+    public void sit() {}
+
+    public void speak() {
+        print("Mine");
+    }
+}
+
+class SmartDog {
+    public void sit() {}
+    public void speak() {
+        print("SmartDog");
+    }
+}
+
+class CommunidateReflectively {
+    public static void perform(Object speaker) {
+        Class<?> spc = speaker.getClass();
+
+        try {
+            try {
+                Method speak = speak.getMethod("speak");
+                speak.invoke(speaker);
+            } catch(NoSuchMethodExceptioin e) {
+                print(speaker + " cannot speak");
+            }
+
+              try {
+                Method sit = speak.getMethod("sit");
+                speak.invoke(speaker);
+            } catch(NoSuchMethodExceptioin e) {
+                print(speaker + " cannot sit");
+            }
+        } catch (Exception e) {
+            throw new RuntimeException(speaker.toString(), e);
+        }
+    }
+}
+```
+
+- **潜在类型机制,实际上是指定了一个"隐式的接口",只不过我们不关心它们是什么类型,是否实现了统一的接口**,
+ **我只关心在它的对象可以调用这些方法**, 
+- **为了实现潜在类型机制又不使用反射,可以考虑使用适配器模式**
+
 ## 代码注意
 
 - 泛型方法优于泛型类
