effective in java 泛型05

--- a/book/effective java/4.泛型.md
+++ b/book/effective java/4.泛型.md
@@ -111,3 +111,34 @@ static <E> E add(List<? extends E> list, Function<E> fuction, E iniValue) {
 public static <T extends Comparable<? super T>> T max(List<? extends T> list) {
 }
 ```
+
+## 类型安全异构容器
+
+- 一般情况下，java中的泛型容器所能有的泛型参数是固定，但有时我们希望，容器中存储的类型有很多种，同时在做插入取值的时候，也能够编译期间的类型安全，这时应当用到异构容器
+
+- 异构容器,主要对于map,主要思想是：**将key参数化，而不是将容器参数化**。其中主要用到的是Class<?>类型
+
+- 重点：**在异构容器为了确保类型安全，使用class的cast方法**
+
+```java
+public class Favorites {
+    private Map<Class<?>, Object> favourites = new HashMap<>();
+
+    public <T> void put(Class<T> classType, T instance) {
+        if (classType == null) {
+            throw new NullPointerException("class type is null");
+        }
+
+        // 使用泛型的类型转换，确保类型安全
+        favourites.put(classType, classType.cast(instance));
+    }
+
+    public <T> T get(Class<T> classType) {
+        if (classType == null) {
+            return null;
+        }
+        // 进行转换
+        return classType.cast(favourites.get(classType));
+    }
+}
+```
