--- a/book/effective java/1.创建销毁对象.md
+++ b/book/effective java/1.创建销毁对象.md
@@ -1,5 +1,14 @@
 # 创建销毁对象
 
+- [static 工厂方法](#static-工厂方法)
+- [Builder模式](#builder模式)
+- [单例模式](#单例模式)
+- [私有构造函数](#私有构造函数)
+- [避免创建不必要的对象](#避免创建不必要的对象)
+- [消除过期对象的引用](#消除过期对象的引用)
+- [避免使用finalize()的方法](#避免使用finalize的方法)
+
+
 ## static 工厂方法
 
 - 使用具名static工厂方法创建对象，而不是构造函数
