--- a/book/effective java/2.对象通用方法.md
+++ b/book/effective java/2.对象通用方法.md
@@ -1,5 +1,24 @@
 # 对象通用的方法
 
+- [equals方法](#equals方法)
+    - [重写的原因](#重写的原因)
+    - [重写的原则](#重写的原则)
+    - [注意点](#注意点)
+    - [重写步骤](#重写步骤)
+- [hashCode()方法](#hashcode方法)
+    - [hashCode()方法原则](#hashcode方法原则)
+    - [计算方法](#计算方法)
+    - [注意事项](#注意事项)
+- [toString()方法](#tostring方法)
+    - [toString()方法原则](#tostring方法原则)
+- [clone()方法](#clone方法)
+    - [clone()方法原则](#clone方法原则)
+    - [使用方法](#使用方法)
+- [考虑实现Comparable接口](#考虑实现comparable接口)
+    - [Comparable接口原则](#comparable接口原则)
+    - [Comparable注意事项](#comparable注意事项)
+
+
 ## equals方法
 
 ### 重写的原因
@@ -74,14 +93,14 @@ public class Test {
 
 - 初始化一个整形变量，为此变量赋予一个非零的常数值，比如int result = 17;
 - 选取equals方法中用于比较的所有域，然后针对每个域的属性进行计算：
-  - 如果是boolean值，则计算f ? 1:0
-  - 如果是byte\char\short\int,则计算(int)f
-  - 如果是long值，则计算(int)(f ^ (f >>> 32))
-  - 如果是float值，则计算Float.floatToIntBits(f)
-  - 如果是double值，则计算Double.doubleToLongBits(f)，然后返回的结果是long,再用规则(3)去处理long,得到int
-  - 如果是对象应用，如果equals方法中采取递归调用的比较方式，那么hashCode中同样采取递归调用hashCode的方式。
+    - 如果是boolean值，则计算f ? 1:0
+    - 如果是byte\char\short\int,则计算(int)f
+    - 如果是long值，则计算(int)(f ^ (f >>> 32))
+    - 如果是float值，则计算Float.floatToIntBits(f)
+    - 如果是double值，则计算Double.doubleToLongBits(f)，然后返回的结果是long,再用规则(3)去处理long,得到int
+    - 如果是对象应用，如果equals方法中采取递归调用的比较方式，那么hashCode中同样采取递归调用hashCode的方式。
    否则需要为这个域计算一个范式，比如当这个域的值为null的时候，那么hashCode 值为0
-  - 如果是数组，那么需要为每个元素当做单独的域来处理,对每一个元素获得值，然后将数组当作一个对象返回一个hashCode。
+    - 如果是数组，那么需要为每个元素当做单独的域来处理,对每一个元素获得值，然后将数组当作一个对象返回一个hashCode。
    也可以使用java.util.Arrays.hashCode方法得到一个值
 - 然后将上面每一个域获得的值，调用result = 31*result + c
 - 最后返回result
