--- a/book/effective java/3.类与接口.md
+++ b/book/effective java/3.类与接口.md
@@ -1,5 +1,38 @@
 # 类与接口
 
+- [使类与成员的可访问性最小化](#使类与成员的可访问性最小化)
+    - [类与接口的可访问性](#类与接口的可访问性)
+    - [类成员的可访问性](#类成员的可访问性)
+- [在公有类中使用访问方法而不是公有域](#在公有类中使用访问方法而不是公有域)
+- [使可变性最小化](#使可变性最小化)
+    - [不可变类](#不可变类)
+    - [可变性最小化](#可变性最小化)
+- [复合优先于继承](#复合优先于继承)
+    - [继承的劣势](#继承的劣势)
+    - [使用复合](#使用复合)
+    - [复合 VS 继承](#复合-vs-继承)
+- [要么为继承设计，并提供文档，要么就禁止继承](#要么为继承设计并提供文档要么就禁止继承)
+    - [专为继承而设计的类](#专为继承而设计的类)
+    - [最佳实践](#最佳实践)
+- [接口优先于抽象类](#接口优先于抽象类)
+    - [接口相比抽象类的优势](#接口相比抽象类的优势)
+    - [骨架实现](#骨架实现)
+    - [模拟多重继承](#模拟多重继承)
+    - [简单实现](#简单实现)
+    - [接口相对于抽象类的缺点](#接口相对于抽象类的缺点)
+- [接口只被用来类型定义](#接口只被用来类型定义)
+- [类层优先于标签类](#类层优先于标签类)
+    - [标签类](#标签类)
+    - [将标签类转换为类层次](#将标签类转换为类层次)
+    - [相比较标签类的优点](#相比较标签类的优点)
+- [用函数对象表示策略](#用函数对象表示策略)
+    - [函数对象](#函数对象)
+    - [函数对象的优点以及使用技巧](#函数对象的优点以及使用技巧)
+- [优先考虑静态成员类](#优先考虑静态成员类)
+    - [嵌套类](#嵌套类)
+    - [嵌套类的使用技能](#嵌套类的使用技能)
+
+
 ## 使类与成员的可访问性最小化
 
 - 原则：**尽可能使类或类的成员不被外界访问**
