--- a/book/thinking in java/04 多态 接口.md
+++ b/book/thinking in java/04 多态 接口.md
@@ -1,5 +1,17 @@
 # 多态与接口
 
+- [多态](#多态)
+    - [多态基础](#多态基础)
+    - [构造函数](#构造函数)
+    - [协变返回类型](#协变返回类型)
+- [接口与抽象](#接口与抽象)
+    - [抽象类与抽象方法](#抽象类与抽象方法)
+    - [接口](#接口)
+    - [接口的继承](#接口的继承)
+    - [接口中的域](#接口中的域)
+    - [接口的常见用法](#接口的常见用法)
+
+
 ## 多态
 
 ### 多态基础
