--- a/book/thinking in java/05 内部类.md
+++ b/book/thinking in java/05 内部类.md
@@ -1,5 +1,15 @@
 # 内部类
 
+- [非static内部类](#非static内部类)
+- [内部类的向上转型](#内部类的向上转型)
+- [局部类](#局部类)
+- [匿名内部类](#匿名内部类)
+- [static内部类（嵌套类）](#static内部类嵌套类)
+- [接口内部的类](#接口内部的类)
+- [局部内部类](#局部内部类)
+- [内部类的继承](#内部类的继承)
+
+
 - 内部类，将一个类的定义放在另一个类的内部
 - 一个非static内部类被嵌套多少层并不重要，它能透明的访问所有它所嵌入的外围类的所有成员，包括私有成员
 
