--- a/book/thinking in java/07 持有对象.md
+++ b/book/thinking in java/07 持有对象.md
@@ -1,5 +1,13 @@
 # 持有对象
 
+- [容器基础](#容器基础)
+- [Collection](#collection)
+- [Arrays.asList()](#arraysaslist)
+- [List](#list)
+- [Set](#set)
+- [迭代器](#迭代器)
+
+
 ## 容器基础
 
 ![java容器](../../resources/java_collection.jpg)
