--- a/book/thinking in java/11 多线程.md
+++ b/book/thinking in java/11 多线程.md
@@ -1,5 +1,23 @@
 # 多线程
 
+- [线程的状态](#线程的状态)
+- [线程sleep()](#线程sleep)
+- [线程优先级](#线程优先级)
+- [线程yield()](#线程yield)
+- [线程 join()](#线程-join)
+- [后台线程](#后台线程)
+- [异常](#异常)
+- [使用Executor管理thread对象](#使用executor管理thread对象)
+- [从任务中返回值](#从任务中返回值)
+- [解决共享资源兑争](#解决共享资源兑争)
+- [同步与锁](#同步与锁)
+- [线程阻塞](#线程阻塞)
+- [原子性与可见性](#原子性与可见性)
+- [临界区](#临界区)
+- [在其它对象上同步](#在其它对象上同步)
+- [ThreadLocal](#threadlocal)
+
+
 - 进程是运行在它自己的地址空间内的自包容程序
 - 一个线程就是在进程中的一个顺序控制流
 
@@ -19,13 +37,13 @@
 - **死亡态**：当线程的run()方法完成时就认为它死去。这个线程对象也许是活的，但是，它已经不是一个单独执行的线程。线程一旦死亡，就不能复生.如果在一个死去的线程上调用start()方法，会抛出java.lang.IllegalThreadStateException异常。
 
 - **使线程离开运行状态的方法**：
-  - 调用Thread.sleep()：使当前线程至少睡眠这个时间（尽管它可能在指定的时间之前被中断）;
-  - 调用Thread.yield()：不能保障太多事情，尽管通常它会让当前运行线程回到可运行性状态，使得有相同优先级的线程有机会执行;
-  - 调用join()方法：保证当前线程停止执行，直到该线程所加入的线程完成为止。然而，如果它加入的线程没有存活，则当前线程不需要停止;
-  - 线程的run()方法完成;
-  - 在对象上调用wait()方法（不是在线程上调用）;
-  - 线程不能在对象上获得锁定，它正试图运行该对象的方法代码;、
-  - 线程调度程序可以决定将当前运行状态移动到可运行状态，以便让另一个线程获得运行机会，而不需要任何理由
+    - 调用Thread.sleep()：使当前线程至少睡眠这个时间（尽管它可能在指定的时间之前被中断）;
+    - 调用Thread.yield()：不能保障太多事情，尽管通常它会让当前运行线程回到可运行性状态，使得有相同优先级的线程有机会执行;
+    - 调用join()方法：保证当前线程停止执行，直到该线程所加入的线程完成为止。然而，如果它加入的线程没有存活，则当前线程不需要停止;
+    - 线程的run()方法完成;
+    - 在对象上调用wait()方法（不是在线程上调用）;
+    - 线程不能在对象上获得锁定，它正试图运行该对象的方法代码;、
+    - 线程调度程序可以决定将当前运行状态移动到可运行状态，以便让另一个线程获得运行机会，而不需要任何理由
 
 ## 线程sleep()
 
@@ -130,7 +148,7 @@ class Task implements Callable<String> {
   public Task(int id) {
     this.id = id;
   }
-  
+
   public String call(){
     return "result of Task" + id;
   }
