--- a/book/thinking in java/02 对象的初始化与清理.md
+++ b/book/thinking in java/02 对象的初始化与清理.md
@@ -1,5 +1,14 @@
 # 对象的初始化与清理
 
+- [finalize()](#finalize)
+- [垃圾回收器](#垃圾回收器)
+- [成员初始化顺序](#成员初始化顺序)
+- [数组](#数组)
+- [枚举类型](#枚举类型)
+- [static代码块初始化](#static代码块初始化)
+- [普通代码块初始化](#普通代码块初始化)
+
+
 - 类的成员总是执行默认初始化，对象为null,基本变量为对应的值。而局部变量没有初始化则是未定义的
 
 - 尽管可以用this调用一个构造器，但是却不能调用两个构造器，并且必须将构造器的调用置于最起始处，否则会报错
