--- a/book/thinking in java/03 类复用.md
+++ b/book/thinking in java/03 类复用.md
@@ -1,5 +1,13 @@
 # 类复用
 
+- [构造函数](#构造函数)
+- [清理函数](#清理函数)
+- [名称屏蔽](#名称屏蔽)
+- [protected](#protected)
+- [final](#final)
+- [代理](#代理)
+
+
 - 复用类：组合，继承，代理
 
 - 即使一个类只有包访问权限，其public main依然是可以访问的
@@ -7,9 +15,9 @@
 ## 构造函数
 
 - 初始化类对象的三个地方：
-  - 在对象定义的地方，它们总是在构造器被调用之前初始化；
-  - 构造函数；
-  - 使用对象之前，惰性加载
+    - 在对象定义的地方，它们总是在构造器被调用之前初始化;
+    - 构造函数；
+    - 使用对象之前，惰性加载
 
 - **导出类初始化，总是先初始化基类**，类的构造是从基类向外扩散的，所以**基类在导出类构造器可以访问它之前，已经完成了初始化**
 - 如果基类没有构造函数或者有默认构造函数，导出类的构造函数就不必明确调用基类构造函数，否则必须用super调用父类的构造函数
