--- a/book/thinking in java/09 类型信息.md
+++ b/book/thinking in java/09 类型信息.md
@@ -1,5 +1,17 @@
 # 类型信息
 
+- [Class](#class)
+- [Class常见方法](#class常见方法)
+- [类字面常量](#类字面常量)
+- [newInstance](#newinstance)
+- [cast](#cast)
+- [instanceOf](#instanceof)
+- [反射](#反射)
+- [空对象](#空对象)
+- [接口与类型信息](#接口与类型信息)
+- [使用RTTI的地方](#使用rtti的地方)
+
+
 ## Class
 
 - 每一个类都有一个class对象
@@ -37,9 +49,9 @@ System.out.print(b == c);
 ```
 
 - 当使用".class“来创建Class对象的引用时，不会自动地初始化该Class对象：
-  - a.加载，查找字节码，创建class对象;
-  - b.链接，验证字节码，为静态域分配存储空间，如果有必要的话，将解析这个类创建 的对其它类的所有引用；
-  - c.初始化，如果该类有超类，则对其初始化，执行静态初始化器和静态初始化块，
+    - a.加载，查找字节码，创建class对象;
+    - b.链接，验证字节码，为静态域分配存储空间，如果有必要的话，将解析这个类创建 的对其它类的所有引用；
+    - c.初始化，如果该类有超类，则对其初始化，执行静态初始化器和静态初始化块，
   初始化被延迟到了对静态方法和非常数静态域的首次引
 
 ## newInstance
