--- a/book/effective java/4.枚举.md
+++ b/book/effective java/4.枚举.md
@@ -1,5 +1,18 @@
 # 枚举
 
+- [用enum代替int常量](#用enum代替int常量)
+    - [枚举的基本认识：](#枚举的基本认识)
+    - [枚举与int常量比较](#枚举与int常量比较)
+    - [成员变量与成员方法](#成员变量与成员方法)
+    - [策略枚举](#策略枚举)
+- [用实体域代替序数](#用实体域代替序数)
+- [用EnumSet代替位域](#用enumset代替位域)
+    - [位域](#位域)
+    - [EnumSet](#enumset)
+- [使用EnumMap代替序数索引](#使用enummap代替序数索引)
+- [用接口来模拟可伸缩的枚举](#用接口来模拟可伸缩的枚举)
+
+
 ## 用enum代替int常量
 
 ### 枚举的基本认识：
