--- a/book/thinking in java/12 注解.md
+++ b/book/thinking in java/12 注解.md
@@ -1,26 +1,37 @@
 # 注解
 
+- [基本语法](#基本语法)
+    - [元注解](#元注解)
+    - [注解元素](#注解元素)
+    - [注解作为注解的元素](#注解作为注解的元素)
+- [其它注解知识点](#其它注解知识点)
+- [Effective Java 注解使用技巧](#effective-java-注解使用技巧)
+    - [注解优于命名模式](#注解优于命名模式)
+    - [坚持使用@Override注解](#坚持使用override注解)
+    - [用标记接口定义类型](#用标记接口定义类型)
+
+
 ## 基本语法
 
 ### 元注解
 
 - **@Target:** 表示该注解可以用到什么地方
-    - **CONSTRUCTOR:**构造器声明
-    - **FIELD:**域声明，包括enum实例
-    - **LOCAL_VARIABLE:**局部变量声明
-    - **METHOD:**方法声明
-    - **PACKAGE:**包声明
-    - **PARAMETER:**参数声明
-    - **TYPE:**类、接口，enum声明，包括注解类型
+    - CONSTRUCTOR:构造器声明
+    - FIELD:域声明，包括enum实例
+    - LOCAL_VARIABLE:局部变量声明
+    - METHOD:方法声明
+    - PACKAGE:包声明
+    - PARAMETER:参数声明
+    - TYPE:类、接口，enum声明，包括注解类型
 
-- **@Retention:**表示需要在什么级别保存该注解信息
-    - **SOURCE:**注解将被编译器丢弃
-    - **CLASS:**注解在class文件中可用，但是会被jvm丢弃
-    - **RUNTIME:**vm将在运行期间也保留，因此可以通过反射机制读取注解的信息
+- **@Retention:** 表示需要在什么级别保存该注解信息
+    - SOURCE:注解将被编译器丢弃
+    - CLASS:注解在class文件中可用，但是会被jvm丢弃
+    - RUNTIME:vm将在运行期间也保留，因此可以通过反射机制读取注解的信息
 
-- **DOCUMENTED:**将此注解包含在javadoc中
+- **DOCUMENTED:** 将此注解包含在javadoc中
 
-- **Inherited:**允许子类继承父类中的注解
+- **Inherited:** 允许子类继承父类中的注解
 
 ### 注解元素
 
